--- a/_posts/2025-2-26-cs61c-RISC-V.md
+++ b/_posts/2025-2-26-cs61c-RISC-V.md
@@ -7,7 +7,7 @@ description: RISC-V的学习记录
 pin: true
 ---
 
-## Assembly
+## Assembly Instructions
 ```
 add rd, rs1, rs2	//将rs1+rs2的结果存储在rd这个寄存器中
 sub rd, rs1, rs2	//将rs1-rs2的结果存储在rd这个寄存器中
@@ -51,6 +51,12 @@ li rd, 13		//addi rd, x0, 13(load immidiate)
 nope			//addi x0, x0, 0(没有进行任何操作)
 ```
 
+## Assembly Directives
+汇编语言中除了基本的指令和伪指令这些**在运行时执行**的语言外，还有一些初始化的**汇编指示符**，如常见的`.text`和`.data`等，虽然这类指示符挺多，但大致分为`.text`段用于表示代码段，这里的代码都是实际运行的代码，以及`.data`段用于初始化一些东西，如`n: .word 9`就是为n开辟了一个字的空间并将其初始化为9
+
+而这存储的地方与局部变量不一样，局部变量一般是存储在栈中，在最高的地址中向下增长，与之对应的较低地址处即是向上增长的堆空间，再往下就依次是`.data`段和`.text`段，至于硬件层面对应的什么期待后续
+
+
 ## About Machine Program
 汇编代码在被汇编程序转换成`.o`文件后，会和一些预先创建好的库的`.o`文件链接起来，最后生成机器代码可执行`.out`文件
 
@@ -63,12 +69,18 @@ nope			//addi x0, x0, 0(没有进行任何操作)
 ## RISC-V Function Calls
 我们选择使用寄存器而不是使用内存，因为寄存器往往更快，对于寄存器中的几个有一些别称可以直接使用，如
 ```
-a0-a7 : x10-x17		//八个参数寄存器用来传参，其中a0和a1用来存返回值
 ra    : x1		//return address register，存返回地址
 sp    : x2		//stack pointer，栈指针
-s0-s1 : x8-x9
+gp    : x3		//全局指针，用于访问全局变量
+tp    : x4		//线程指针，用于线程局部存储
+t0-t2 : x5-x7		//临时寄存器
+s0-s1 : x8-x9		//保存寄存器
+a0-a7 : x10-x17		//八个参数寄存器用来传参，其中a0和a1用来存返回值
 s2-s11: x18-x27
+t3-t6 : x28-x31
 ```
+这里t寄存器表示临时变量，一般不用特意修改，而s寄存器如果在函数中需要调用或修改，则必须在一开始先存在栈上以便于后面变回之前的数据，**但这只是软件层面的规定而已，二者实际上都是通用寄存器**(但这样区分的目的是什么还没有明确的感受)
+
 而RISV-V中的指令也是存在内存中的，每一条指令占据4个字节，下面模拟一个，其中的地址用十进制形式模拟
 ```
 1000 mv a0, s0		//x = a
@@ -80,7 +92,7 @@ s2-s11: x18-x27
 2000 sum : add a0, a0, a1
 2004 jr ra
 ```
-可以发现部分代码用到了**j**而部分用到了**jr**，这是因为j对应跳转的是立即数地址，而jr对应的是寄存器中存放的地址，而我们的2000-2004这两行代码可以算作一个函数，则必然**会在代码段中被多次调用**，所以**不能指向一个固定的地址**，而是每次使用的时候更改ra的值再调用函数以**达到返回地址的目的**
+可以发现部分代码用到了**j**而部分用到了**jr**即**jump register**，这是因为**j**对应跳转的是立即数地址，而**jr**对应的是寄存器中存放的地址，而我们的2000-2004这两行代码可以算作一个函数，则必然**会在代码段中被多次调用**，所以**不能指向一个固定的地址**，而是每次使用的时候更改ra的值再调用函数以**达到返回地址的目的**
 
 还有一些关于函数跳转的新指令
 ```
@@ -92,6 +104,12 @@ s2-s11: x18-x27
 1012 j sum 			//goto sum
 ```
 相当于把ra的地址更新了，且占用更少的地址，这在汇编代码中用的很频繁
+
+**注意：j才是伪指令，而jal不是**
+```
+jal rd, offset
+```
+这是jal命令的语法，rd是目标寄存器，也就是把当前指令的下一个指令的地址传入进去，也就是`PC + 4`，而offset是一个**偏移量**，是**一个立即数**，如果其值为`-4`，那么就是跳转到上一条指令所在位置，它同时**也可以是一个标签**，汇编器会计算出**其真实的偏移量**
 
 进一步了解函数调用，在每次调用函数时，寄存器的个数还是有限，如果函数需要多个临时变量来存储，则必然会出现**覆盖原来旧值的情况**，所以我们就需要**有一个地方用于存放这些旧值，以便调用完函数后的更新**，这就是我们的**栈stack**
 
@@ -111,6 +129,10 @@ addi sp, sp, 8		//函数调用的第三步，epilogue结语
 jr ra
 ```
 
+> **但是若嵌套调用的话，总会出现寄存器不够用的情况**，当我们进行函数调用的时候该怎么存储旧的数据，又该怎么恢复他们呢
+
+
+
 ## RISC-V Instruction Formats
 > 比汇编语言再低一层的是机器语言，也就是0和1组成的语言，我们要做的就是将汇编语言改成机器语言
 
@@ -129,10 +151,13 @@ J-format for jumps
 
 ### I-format
 拿`addi`举例，它和前面`add`的区别在于把`rs2`换成了立即数，但是5个bits最多32个数的范围显然不够涵盖立即数，所以将func7也用于存储立即数，而load操作也是要求**一个源寄存器、一个目标寄存器和一个立即数**，所以load命令延用`I-format`就够了
-
+ 
 ### S-format
 
 |Bits|31-25|24-20|19-15|14-12|11-7|6-0|
 |-|-|-|-|-|-|-|
 |**Field**|Imm[11:5]|rs2|rs1|funct3|imm[4:0]|opcode|
 |**Width**|7|5|5|3|5|7|
+
+## Lab03
+
