--- a/_posts/2025-3-30-6.s081-lab01.md
+++ b/_posts/2025-3-30-6.s081-lab01.md
@@ -1,5 +1,5 @@
 ---
-title: Lab01 - Xv6 and Unix utilities
+title: 6.s081 - Lab01 - Xv6 and Unix utilities
 date: 2025-3-30 13:50:00 +0800
 categories: [6.s081, lab01]
 tags: [notebook]
